# screen-tools

./: .gitignore  README.md
client/: Cargo.toml  test.txt
client/.claude/: settings.local.json
client/src/: main.rs
client/web/: index.html
server/: Cargo.toml
server/src/: main.rs
