[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
qrcode = "0.14"
base64 = "0.22"
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
axum-embed = "0.1"
rust-embed = "8.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }